# jobflow

./: .gitignore  LICENSE  Makefile  README.md  README_en.md  config.example.yaml
backend/: Makefile  pyproject.toml  requirements_temp.txt
backend/app/: __init__.py
backend/app/gateway/: __init__.py  app.py  sse.py  thread_manager.py  uploads.py
backend/app/gateway/routers/: __init__.py  chat.py  jobs.py  models_route.py  resume.py  skills.py  tracker.py
backend/tests/: test_career_agent.py  test_gateway.py  test_job_tracker.py  test_match_scorer.py  test_middlewares.py  test_registry.py  test_resume_parser.py  test_thread_state.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  ToolCallDisplay.tsx
frontend/src/components/context/: ContextPanel.tsx  MatchScoreCard.tsx  ResumeSummaryCard.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/resume/: ResumeView.tsx
frontend/src/components/tracker/: TrackerView.tsx
frontend/src/components/ui/: Avatar.tsx  Badge.tsx  Button.tsx  Card.tsx  Input.tsx  Progress.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/store/: app-store.ts  tracker-store.ts
skills/public/cover-letter/: SKILL.md
skills/public/jd-analysis/: SKILL.md
skills/public/mock-interview/: SKILL.md
skills/public/resume-optimization/: SKILL.md
skills/public/salary-negotiation/: SKILL.md
